playing with git commment added

--- a/Rabbits.ipynb
+++ b/Rabbits.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#This is a change\n",
     "# Configure Jupyter so figures appear in the notebook\n",
     "%matplotlib inline\n",
     "\n",
